<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AppLea</string>
    <string name="email_hint">Email</string>
    <string name="splash_comment">Welcome to CommonTasker!</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="warning_internet">Please connect to working Internet connection</string>
    <string name="no_text"> </string>
    <string name="google_maps_API_key">AAIzaSyCIH9QJjwFxkDeNI-61QWyiL_scDW5LVWc</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="time_style_12_h" tools:ignore="MissingTranslation">12-hour AM/PM</string>
    <string name="time_style_24_h" tools:ignore="MissingTranslation">24-hour</string>
    <string name="pref_title_date_style" tools:ignore="MissingTranslation">Date format</string>
    <string name="date_style_dots" tools:ignore="MissingTranslation">dd.mm.(yy)</string>
    <string name="date_style_slash_month_first" tools:ignore="MissingTranslation">mm/dd(/yy)</string>
    <string name="date_style_slash_day_first" tools:ignore="MissingTranslation">dd/mm(/yy)</string>
    <string name="forecast_number_of_days_hours_3_days" tools:ignore="MissingTranslation">3 days</string>
    <string name="forecast_number_of_days_hours_4_days" tools:ignore="MissingTranslation">4 days</string>
    <string name="forecast_number_of_days_hours_5_days" tools:ignore="MissingTranslation">5 days</string>
    <string name="forecast_number_of_days_hours_3_hours" tools:ignore="MissingTranslation">3x (3 hours interval)</string>
    <string name="forecast_number_of_days_hours_4_hours" tools:ignore="MissingTranslation">4x (3 hours interval)</string>
    <string name="forecast_number_of_days_hours_5_hours" tools:ignore="MissingTranslation">5x (3 hours interval)</string>
    <string name="wind_direction_nothing" tools:ignore="MissingTranslation">Disabled</string>
    <string name="wind_direction_abbreviation" tools:ignore="MissingTranslation">Abbrev N↓, NE↙, …</string>
    <string name="wind_direction_deg" tools:ignore="MissingTranslation">Degrees from the north</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="error_layout">Ops! Error retrieving data, swipe down to try again.</string>
    <string name="pref_title_time_style" tools:ignore="MissingTranslation">Time format</string>
    <string name="time_style_system" tools:ignore="MissingTranslation">System</string>
    <string name="inches_label" tools:ignore="MissingTranslation">inches</string>
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="pref_title_wind_direction" tools:ignore="MissingTranslation">Wind direction style</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="pref_title_rain_snow" tools:ignore="MissingTranslation">Rain and snow</string>
    <string name="proregistry">Make logs of your farming activities and share them with the community</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="auth_failed">Εναπαρκής για αυθεντικοποίηση</string>
    <string name="auth_success">Αυθεντικοποίηση επιτυχής</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">BiCycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>
    <string name="str_use_small">Ελαφρά</string>
    <string name="str_use_medium">Μέτρια</string>
    <string name="str_use_heavy">Βαριά</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View all comments</string>
    <string name="view_post_fragment">View posts</string>
    <string name="profile_fragment">Profile</string>
    <string name="sign_out_fragment">Sing Out</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>
    <string name="gallery">Γκαλερί Εικόνων</string>
    <string name="photo">Φωτογραφία</string>
    <string name="string_open_camera">Άνοιξε Κάμερα</string>
    <string name="string_next">Επόμενο</string>
    <string name="string_share">Κοινοποίηση</string>
    <string name="water">Πότισμα</string>
    <string name="shear">Κλάδεμα</string>
    <string name="lu">Λίπανση</string>
    <string name="delve">Όργωμα</string>
    <string name="make_an_order">Είδη Καλλιέργειας</string>
    <string name="sign_out">Sign Out</string>
    <string name="post">Καταχωρήσεις</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="scoreboardFilter">ScoreboardFilter</string>
    <string name="history">History</string>
    <string name="friends_list">Φίλοι</string>
    <string name="find_friends">Βρές φίλους</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>
    <string name="heading_recentscore">ΚΑΤΑΤΑΞΗ</string>
    <string name="heading_recent">ΓΕΝΙΚΑ</string>
    <string name="heading_my_posts">ΚΑΤΑΧΩΡΗΣΕΙΣ</string>
    <string name="my_top_posts">ΚΟΡΥΦΑΙΑ</string>
    <string name="history_my_posts">History</string>
    <string name="history_my_top_posts">ΤΟΠ</string>
    <string name="menu_profile">Προφίλ</string>
    <string name="menu_chat">Συνομιλία</string>
    <string name="menu_contact">Scoreboard</string>
    <string name="menu_online">Online</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_surname">Surname</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Email</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Αποθήκευση Επεξεργασίας</string>
    <string name="actions_menu"> </string>
    <string name="m">MΕΝΟΥ</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">\nPrivacy policy</string>
    <string name="pref_storage_title">Storage</string>
    <string name="pref_storage_dialog">Remember clipboards for:</string>
    <string name="pref_app_setting_category" tools:ignore="MissingTranslation">App Settings</string>
    <string name="pref_service_title" tools:ignore="MissingTranslation">Service</string>
    <string name="pref_service_summary" tools:ignore="MissingTranslation">Listen system clipboard in background.</string>
    <string name="pref_notification_title" tools:ignore="MissingTranslation">Notification</string>
    <string name="pref_notification_pin_title">Pin Notification</string>
    <string name="pref_notification_pin_summary_on">Always show.</string>
    <string name="pref_notification_pin_summary_off">Only show when clipboard changed.</string>
    <string name="pref_notification_summary_on" tools:ignore="MissingTranslation">Show notification.</string>
    <string name="pref_notification_summary_off" tools:ignore="MissingTranslation">Don\'t show any notification.</string>
    <string name="pref_storage_summary">Set clipboard history limit.</string>
    <string name="pref_notification_priority_title">Notification Priority</string>
    <string name="pref_notification_priority_summary">Set notification priority.</string>
    <string name="pref_click_title">Click Action</string>
    <string name="pref_click_summary">Set click &amp; long click actions.</string>
    <string name="pref_floating_button">Floating Button</string>
    <string name="pref_floating_button_summary">Show floating button on screen.</string>
    <string name="pref_header_about">AppLea</string>
    <string name="app_version">3.5</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq" tools:ignore="MissingTranslation"> </string>
    <string name="title_terms" tools:ignore="MissingTranslation">\nTerms of use</string>
    <string name="title_version" tools:ignore="MissingTranslation">Έκδοση Εφαρμογής</string>
    <string name="hint_email">Πληκτρολογήστε το email σας</string>
    <string name="btn_reset_password">Επαναφορά Κωδικού</string>
    <string name="btn_back">Back</string>
    <string name="social">Community</string>
    <string name="history_bottom">History</string>
    <string name="C">Weather</string>
    <string name="profile_bottom">Profile</string>
    <string name="title_app">What is AppLea?</string>
    <string name="works">How it works?</string>
    <string name="pref_title_category_notification" tools:ignore="MissingTranslation">notification</string>
    <string name="preference_title_activity_general" tools:ignore="MissingTranslation">
General Settings</string>
    <string name="preference_title_activity_widget" tools:ignore="MissingTranslation">
    Ρυθμίσεις widget</string>
    <string name="preference_title_category_location_weather" tools:ignore="MissingTranslation">Update location and weather</string>
    <string name="preference_title_activity_about" tools:ignore="MissingTranslation">About</string>
    <string name="debug_category_title" tools:ignore="MissingTranslation">category title</string>
    <string name="summary_about_info">\n\nΕιδικές Πληροφορίες Χρήσης της Εφαρμογής AppLea</string>
    <string name="preference_title_category_units" tools:ignore="MissingTranslation">Unit settings</string>
    <string name="preference_title_power_save" tools:ignore="MissingTranslation">Power save options</string>
</resources>