<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$GeneralPreferenceFragment"
        android:title="@string/preference_title_activity_general"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$UnitsPreferenceFragment"
        android:title="@string/preference_title_category_units"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$UpdatesPreferenceFragment"
        android:title="@string/preference_title_category_location_weather"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_title_category_notification"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$PowerSavePreferenceFragment"
        android:title="@string/preference_title_power_save"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$WidgetPreferenceFragment"
        android:title="@string/preference_title_activity_widget"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$DebugOptionsPreferenceFragment"
        android:title="@string/debug_category_title"/>
    <header
        android:fragment="com.example.commontask.WeatherSettingsActivity$AboutPreferenceFragment"
        android:title="@string/preference_title_activity_about"/>
</preference-headers>